--- a/DMDW_assignment_1.ipynb
+++ b/DMDW_assignment_1.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "DMDW assignment 1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMedVpW6mL/erMo6eIbv4iO",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cyberbishes/Roshan/blob/main/DMDW_assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
